# BodhiApp

./: .augment-guidelines  .cursorignore  .cursorrules  .dockerignore  .env.sample  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  .python-version  .taurignore  CLAUDE.md  Cargo.toml  Dockerfile  MDFILES.md  Makefile  Makefile.ci.mk  Makefile.docker.mk  Makefile.release.mk  Makefile.website.mk  Makefile.win.mk  NAPI_FFI_HANDOFF_CONTINUATION.md  README.md  TECHDEBT.md  analyze_docker_build.py  app.patched  changed-test.sh  docker-compose-test-deps.yml  filetree-comparison.md  openapi-oai.json  openapi.json  ruff.toml  rust-toolchain.toml  search-result.txt  skills-lock.json  update.json  validate_tokens.py
app/bodhi/: Cargo.toml  build.rs  tauri.conf.json
app/bodhi/empty/: index.html
app/bodhi/resources/: bodhi
app/bodhi/src/: app.rs  chat_template.rs  cli.rs  error.rs  hf.rs  hf_tokenizer.rs  home.rs  interactive.rs  internal.rs  lib.rs  list.rs  main.rs  models.yaml  native.rs  pull.rs  run.rs  serve.rs
app/bodhi/tests/: test_server_chat.rs  test_server_ping.rs
bodhi-app/src-tauri/: Cargo.toml  tauri.conf.json
bodhi-app/src-tauri/src/: main.rs
bodhicore/: .env.example  .gitattributes  Cargo.toml  build.rs
bodhicore/chat-template-compat/: .env.example
bodhicore/chat-template-compat/tests/: test_chat_template.py
bodhicore/docs/: create.md
bodhicore/migrations/: 0001_create_conversations.up.sql
bodhicore/src/: chat_template.rs  cli.rs  create.rs  env_utils.rs  error.rs  hf.rs  hf_tokenizer.rs  home.rs  hub_service.rs  interactive.rs  interactive_route.rs  lib.rs  list.rs  models.yaml  oai.rs  objs.rs  pull.rs  run.rs  serve.rs  service.rs  shared_rw.rs  test_utils.rs  tokenizer_config.rs  utils.rs
bodhicore/src/cli/: alias.rs  command.rs  create.rs  envs.rs  error.rs  list.rs  mod.rs  pull.rs  run.rs  serve.rs
bodhicore/src/db/: mod.rs  no_op.rs  objs.rs  service.rs  sqlite_pool.rs
bodhicore/src/objs/: alias.rs  chat_template.rs  error.rs  gpt_params.rs  hub_file.rs  mod.rs  oai.rs  remote_file.rs  repo.rs  utils.rs
bodhicore/src/server/: auth_middleware.rs  context.rs  direct_sse.rs  error.rs  fwd_sse.rs  interactive.rs  mod.rs  router_state.rs  routes.rs  routes_chat.rs  routes_dev.rs  routes_info.rs  routes_login.rs  routes_models.rs  routes_oai_models.rs  routes_ollama.rs  routes_proxy.rs  routes_setup.rs  routes_ui.rs  run.rs  server.rs  shared_rw.rs  utils.rs
bodhicore/src/service/: app_service.rs  auth_middleware.rs  auth_middleware.rs.bak  auth_service.rs  cache_service.rs  data_service.rs  env_service.rs  env_wrapper.rs  error.rs  hub_service.rs  init_service.rs  mod.rs  secret_service.rs  session_service.rs
bodhicore/src/test_utils/: auth.rs  bindings.rs  bodhi.rs  create.rs  db.rs  envs.rs  hf.rs  home.rs  http.rs  interactive.rs  io.rs  mod.rs  objs.rs  secret.rs  service.rs  session.rs  shared_ctx.rs  state.rs  tracing_test_utils.rs  unused.rs
bodhicore/tests/: test_interactive.rs  test_live_chat_completions.rs  test_router_state.rs  test_routes_chat.rs  test_server_chat.rs  test_server_chat.rs.bak  test_server_chat_stream.rs  test_server_chat_stream.rs.bak
bodhicore/tests/data/: test_file_download_url.txt  test_models.yaml
bodhicore/tests/utils/: live_server_utils.rs  mocks.rs  mod.rs  server.rs  server_test_utils.rs
bodhiserver/: Cargo.toml  build.rs
bodhiserver/bodhiui/: next.config.mjs  package.json  pnpm-lock.yaml
bodhiserver/bodhiui/components/: chat-history.tsx  (+19 more)
bodhiserver/jstests/: package.json  pnpm-lock.yaml
bodhiserver/src/: cli.rs  lib.rs  main.rs
bodhiserver/tests/: test_server.rs  test_server_chat.rs  test_server_chat_stream.rs  test_server_ping.rs
chat-template-compat/: .gitignore  package-lock.json  package.json  popular-templates.js  popular_jinja_analysis.py  popular_templates.py  pyproject.toml  pytest.ini  split_repos.js
chat-template-compat/tests/: conftest.py  test_chat_template.py  test_popular_templates.py
crates/auth_middleware/: CLAUDE.md  Cargo.toml  PACKAGE.md
crates/ci_optims/: CLAUDE.md  Cargo.toml  PACKAGE.md
crates/commands/: CLAUDE.md  Cargo.toml  PACKAGE.md
crates/errmeta_derive/: CLAUDE.md  Cargo.toml  PACKAGE.md
crates/gguf_fast/: Cargo.toml
crates/integration-tests/: .gitignore  CLAUDE.md  Cargo.toml  PACKAGE.md
crates/lib_bodhiserver/: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PACKAGE.md  app_service_builder.md  build.rs  package-lock.json  package.json  playwright.config.mjs
crates/lib_bodhiserver_napi/: .gitignore  .npmignore  .npmrc  CLAUDE.md  Cargo.toml  Makefile  PACKAGE.md  README.md  biome.json  index.d.ts  index.js  jsconfig.json  package-lock.json  package.json  playwright.config.js  playwright.config.mjs  vitest.config.js  vitest.config.mjs
crates/llama_server_proc/: CLAUDE.md  Cargo.toml  Makefile  Makefile.win.mk  PACKAGE.md  build.rs
crates/llamacpp_rs/: Cargo.toml
crates/mcp_client/: CLAUDE.md  Cargo.toml  PACKAGE.md
crates/objs/: ANALYSIS.md  CLAUDE.md  Cargo.toml  PACKAGE.md
crates/routes_all/: CLAUDE.md  Cargo.toml  PACKAGE.md
crates/routes_app/: CLAUDE.md  Cargo.toml  PACKAGE.md  TECHDEBT.md  TESTING.md
crates/routes_oai/: CLAUDE.md  Cargo.toml  PACKAGE.md
crates/server/: Cargo.toml  openai-errors.md
crates/server_app/: CLAUDE.md  Cargo.toml  PACKAGE.md
crates/server_core/: CLAUDE.md  Cargo.toml  PACKAGE.md
crates/services/: .env.sample  .env.test.example  CLAUDE.md  Cargo.toml  PACKAGE.md  TECHDEBT.md
openai-pysdk-compat/: .env.example  .gitignore  assistants.ipynb  pyproject.toml  pytest.ini  ruff.toml
openai-pysdk-compat/openapi/: chat_completions.yaml  llama-cpp-compat.md
openai-pysdk-compat/tests/: common.py  conftest.py  test_assistant.py  test_assistant_example.py  test_chat.py  test_chat_fn.py  test_chat_format.py  test_chat_stream.py  test_chat_tool.py  test_cli.py  test_embeddings.py  test_exception.py  test_files.py  test_image_upload.py  test_instructor_fn.py  test_models.py  test_ollama_chat.py  test_ollama_models.py  test_vector_store_files.py  test_vector_stores.py
(+5900 files in other folders)
