[workspace]
members = [
  "xtask",
  "llama-server-bindings",
  "crates/errmeta_derive",
  "crates/objs",
  "crates/services",
  "crates/commands",
  "crates/server_core",
  "crates/auth_middleware",
  "crates/routes_oai",
  "crates/routes_app",
  "crates/server_app",
  "crates/server",
  "crates/app/bodhi",
  "crates/integration-tests",
]
resolver = "2"

[workspace.dependencies]
llama-server-bindings = { path = "llama-server-bindings" }
errmeta_derive = { path = "crates/errmeta_derive" }
objs = { path = "crates/objs" }
services = { path = "crates/services" }
commands = { path = "crates/commands" }
server_core = { path = "crates/server_core" }
auth_middleware = { path = "crates/auth_middleware" }
routes_oai = { path = "crates/routes_oai" }
routes_app = { path = "crates/routes_app" }
server_app = { path = "crates/server_app" }
server = { path = "crates/server" }
bodhi = { path = "app/bodhi" }

anyhow = "1.0.81"
anyhow_trace = "0.1.3"
async-openai = "0.23.0"
async-trait = "0.1.80"
axum = "0.7.5"
axum-extra = "0.9.3"
axum-test = "15.7.0"
base64 = "0.22.1"
bytes = "1.6.1"
chrono = "0.4.38"
clap = "4.5.2"
convert_case = "0.6.0"
cookie = "0.18.1"
ctor = "0.2.8"
derive_builder = "0.20.0"
derive-new = "0.6.0"
dialoguer = "0.11.0"
dircpy = "0.3.16"
dirs = "5.0.1"
dotenv = "0.15.0"
fluent = "0.16.1"
fluent-resmgr = "0.0.7"
fs_extra = "1.3.0"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
hf-hub = "0.3.2"
http = "1.1.0"
http-body = "1.0.1"
http-body-util = "0.1.0"
hyper = "1.4.1"
hyper-util = "0.1.7"
include_dir = "0.7.3"
indicatif = "0.17.8"
jsonwebtoken = "9.3.0"
keyring = { version = "3.2.0", default-features = false }
lazy_static = "1.4.0"
maplit = "1.0.2"
mime = "0.3.17"
mime_guess = "2.0.4"
mini-moka = "0.10.3"
minijinja = "2.0.1"
mockall = "0.12.1"
mockito = "1.5.0"
mousse = "0.1.1"
oauth2 = "4.4.2"
once_cell = "1.19.0"
pin-project-lite = "0.2.14"
pretty_assertions = "1.4.1"
prettytable-rs = "0.10.0"
proc-macro2 = "1.0.86"
quote = "1.0.37"
rand = "0.8.5"
regex = "1.10.4"
reqwest = "0.12.3"
rsa = "0.9.6"
rstest = "0.19.0"
serde = "1.0.197"
serde_json = "1.0.114"
serde_yaml = "0.9.34"
serial_test = "3.1.1"
sha2 = "0.10.8"
sqlx = "0.8.0"
strfmt = "0.2.4"
strum = "0.26.2"
syn = "2.0.79"
sync_wrapper = "1.0.1"
tap = "1.0.1"
tempfile = "3.10.1"
thiserror = "1.0.61"
time = "0.3.36"
tokio = "1.36.0"
tokio-stream = "0.1.15"
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = "0.5.2"
tower-serve-static = "0.1.1"
tower-sessions = "0.12.3"
tower-sessions-sqlx-store = "0.13.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
trybuild = "1.0.99"
unic-langid = "0.9.5"
ureq = "2.9.7"
url = "2.5.2"
uuid = "1.8.0"
validator = "0.18.1"
walkdir = "2.5.0"
webbrowser = "1.0.0"

[profile.release.package.bodhi]
codegen-units = 1
strip = true
opt-level = 3
