[workspace]
members = [
  "xtask",
  "async-openai/async-openai",
  "async-openai/async-openai-macros",
  "crates/llama_server_proc",
  "crates/errmeta_derive",
  "crates/objs",
  "crates/services",
  "crates/commands",
  "crates/server_core",
  "crates/auth_middleware",
  "crates/routes_oai",
  "crates/routes_app",
  "crates/routes_all",
  "crates/server_app",
  "crates/lib_bodhiserver",
  "crates/lib_bodhiserver_napi",
  "crates/bodhi/src-tauri",
  "crates/integration-tests",
  "crates/ci_optims",
]
resolver = "2"
exclude = []

[workspace.package]
rust-version = "1.87.0"

[workspace.dependencies]
errmeta_derive = { path = "crates/errmeta_derive" }
objs = { path = "crates/objs" }
llama_server_proc = { path = "crates/llama_server_proc" }
services = { path = "crates/services" }
commands = { path = "crates/commands" }
server_core = { path = "crates/server_core" }
auth_middleware = { path = "crates/auth_middleware" }
routes_oai = { path = "crates/routes_oai" }
routes_app = { path = "crates/routes_app" }
routes_all = { path = "crates/routes_all" }
server_app = { path = "crates/server_app" }
lib_bodhiserver = { path = "crates/lib_bodhiserver" }
lib_bodhiserver_napi = { path = "crates/lib_bodhiserver_napi" }
bodhi = { path = "crates/bodhi/src-tauri" }
ci_optims = { path = "crates/ci_optims" }

aes-gcm = "0.10.3"
anyhow = "1.0.98"
anyhow_trace = "0.1.3"
async-openai = "0.28.3"
async-trait = "0.1.88"
axum = "0.8.4"
axum-extra = "0.10.1"
axum-test = "17.3.0"
base64 = "0.22.1"
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = "0.4.41"
clap = "4.5.40"
convert_case = "0.8.0"
cookie = "0.18.1"
ctor = "0.4.2"
derive_builder = "0.20.2"
derive-new = "0.7.0"
dialoguer = "0.11.0"
dircpy = "0.3.19"
dirs = "6.0.0"
dotenv = "0.15.0"
fluent = "0.17.0"
fluent-resmgr = "0.0.8"
fs_extra = "1.3.0"
fs2 = "0.4.3"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
hf-hub = { version = "0.4.2", default-features = false, features = ["tokio"] }
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = "1.6.0"
hyper-util = "0.1.14"
include_dir = "0.7.4"
indicatif = "0.17.11"
jsonwebtoken = "9.3.1"
keyring = { version = "3.6.2", default-features = false }
lazy_static = "1.5.0"
libc = "0.2.172"
libloading = "0.8.8"
log = "0.4"
maplit = "1.0.2"
memmap2 = "0.9.5"
mime = "0.3.17"
mime_guess = "2.0.5"
mini-moka = "0.10.3"
minijinja = "2.10.2"
mockall = "0.13.1"
mockito = "1.7.0"
mousse = "0.1.1"
napi = "2.16.17"
napi-derive = "2.16.13"
napi-build = "2.2.1"
oauth2 = "5.0.0"
once_cell = "1.21.3"
pbkdf2 = "0.12.2"
phf = "0.11.3"
pin-project-lite = "0.2.16"
portpicker = "0.1.1"
pretty_assertions = "1.4.1"
prettytable = "0.10.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = "0.9.1"
regex = "1.11.1"
reqwest = "0.12.19"
rsa = "0.9.8"
rstest = "0.25.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.33"
serial_test = "3.2.0"
sha2 = "0.10.9"
sqlx = "0.8.6"
strfmt = "0.2.4"
strum = "0.27.1"
syn = "2.0.102"
sync_wrapper = "1.0.2"
tap = "1.0.1"
tauri = "2.5.1"
tauri-plugin-log = "2.4.0"
tauri-build = "2.2.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
time = "0.3.41"
tokio = "1.45.1"
tokio-util = "0.7.15"
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-cookies = "0.11.0"
tower-http = "0.6.6"
tower-serve-static = "0.1.1"
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = "0.15.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
trybuild = "1.0.105"
unic-langid = "0.9.6"
url = "2.5.4"
utoipa = { version = "5.3.1" }
utoipa-swagger-ui = "9.0.2"
uuid = "1.17.0"
validator = "0.20.0"
walkdir = "2.5.0"
webbrowser = "1.0.4"
xtaskops = "0.4.2"


[profile.release]
# Optimize for binary size and build speed
opt-level = "z"    # Optimize for size
lto = "thin"       # Link-time optimization (thin for faster builds)
codegen-units = 1  # Better optimization
strip = true       # Remove debug symbols
panic = "abort"    # Smaller binaries

[profile.dev]
# Faster development builds
opt-level = 0
debug = true
incremental = true
