[package]
name = "bodhicore"
version = "0.0.14-dev"
edition = "2021"

[dependencies]
async-openai = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
derive_builder = { workspace = true }
derive-new = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
hf-hub = { workspace = true }
http-body = { workspace = true }
indicatif = { workspace = true }
jsonwebtoken = { workspace = true }
keyring = { workspace = true }
lazy_static = { workspace = true }
llama-server-bindings = { version = "0.1.0", path = "../llama-server-bindings" }
mime = { workspace = true }
mime_guess = { workspace = true }
mini-moka = { workspace = true }
minijinja = { workspace = true }
oauth2 = { workspace = true }
once_cell = { workspace = true }
pin-project-lite = { workspace = true }
prettytable-rs = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
sync_wrapper = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[dev-dependencies]
anyhow = { workspace = true }
anyhow_trace = { workspace = true }
ctor = { workspace = true }
dircpy = { workspace = true }
http-body-util = { workspace = true }
lazy_static = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true }
mousse = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(ci)'] }
