[package]
name = "bodhicore"
version = "0.0.16-dev"
edition = "2021"

[dependencies]
async-openai = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
commands = { path = "../crates/commands" }
cookie = { workspace = true }
derive_builder = { workspace = true }
derive-new = { workspace = true }
dialoguer = { workspace = true, features = ["history"] }
dirs = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
hf-hub = { workspace = true, features = ["tokio"] }
http-body = { workspace = true }
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true }
indicatif = { workspace = true, features = ["tokio"] }
jsonwebtoken = { workspace = true }
keyring = { workspace = true, default-features = false }
lazy_static = { workspace = true }
llama-server-bindings = { version = "0.1.0", path = "../llama-server-bindings" }
mime = { workspace = true }
mime_guess = { workspace = true }
mini-moka = { workspace = true }
minijinja = { workspace = true }
oauth2 = { workspace = true }
objs = { path = "../crates/objs" }
once_cell = { workspace = true }
pin-project-lite = { workspace = true }
prettytable-rs = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
services = { path = "../crates/services" }
sha2 = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
] }
strum = { workspace = true, features = ["derive"] }
sync_wrapper = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "cors"] }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true, features = ["sqlite"] }
tracing = { workspace = true, features = ["async-await", "log"] }
ureq = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
validator = { workspace = true, features = ["derive"] }
walkdir = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[dev-dependencies]
anyhow = { workspace = true }
anyhow_trace = { workspace = true }
axum-test = { workspace = true }
commands = { path = "../crates/commands", features = ["test-utils"] }
ctor = { workspace = true }
dircpy = { workspace = true }
http-body-util = { workspace = true }
lazy_static = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true }
mockito = { workspace = true }
mousse = { workspace = true }
objs = { path = "../crates/objs", features = ["test-utils"] }
rand = { workspace = true }
rsa = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
services = { path = "../crates/services", features = ["test-utils"] }
strfmt = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tower-cookies = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(ci)'] }

[features]
production = []
test-utils = []