[package]
name = "bodhiserver"
version = "0.1.0"
edition = "2021"
description = "Run LLMs locally"
license = "MIT"
authors = ["Amir Nagri <amir.nagri@gmail.com>"]

[dependencies]
anyhow = "1.0.81"
axum = "0.7.4"
dotenv = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
rand = "0.8.5"
reqwest = "0.11.25"
rstest = "0.18.2"
