[tool.poetry]
name = "chat-template-compat"
version = "0.1.0"
description = ""
authors = ["anagri <127566+anagri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-dotenv = "^0.5.2"
pytest-timeout = "^2.3.1"
jinja2 = "^3.1.4"
transformers = "^4.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
