[tool.poetry]
name = "openai-pysdk-compat"
version = "0.1.0"
description = ""
authors = ["anagri <127566+anagri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
openai = "^1.30.1"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-socket = "^0.7.0"
pytest-dotenv = "^0.5.2"
pytest-timeout = "^2.3.1"
vcrpy = "^6.0.1"
pytest-recording = "^0.13.1"
deepdiff = "^7.0.1"
pydantic = "^2.7.1"
instructor = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
