[package]
name = "bodhi"
version = "0.0.7-dev"
edition = "2021"
description = "Run LLMs locally"
license = "MIT"
authors = ["Amir Nagri <amir.nagri@gmail.com>"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
axum = "0.7.5"
bodhicore = { version = "0.1.0", path = "../../bodhicore" }
clap = { version = "4.5.2", features = ["derive"] }
dotenv = "0.15.0"
futures-util = "0.3.30"
include_dir = "0.7.3"
tauri = { version = "1.6.1", features = ["updater", "api-all", "system-tray"] }
thiserror = "1.0.61"
tokio = { version = "1.36.0", features = ["full"] }
tower-serve-static = "0.1.1"
tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
webbrowser = { version = "1.0.0" }

[build-dependencies]
anyhow = "1.0.81"
fs_extra = "1.3.0"
tauri-build = { version = "1.5.1", features = [] }
