[package]
name = "bodhi"
version = "0.0.14-dev"
edition = "2021"
description = "Run LLMs locally"
license = "MIT"
authors = ["Amir Nagri <amir.nagri@gmail.com>"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
axum = { workspace = true }
bodhicore = { path = "../../bodhicore" }
clap = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
include_dir = { workspace = true }
tauri = { workspace = true, features = ["updater", "api-all", "system-tray"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-serve-static = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
webbrowser = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
fs_extra = { workspace = true }
tauri-build = { workspace = true, features = [] }