[package]
name = "bodhi"
version = "0.0.16-dev"
edition = "2021"
description = "Run LLMs locally"
license = "MIT"
authors = ["Amir Nagri <amir.nagri@gmail.com>"]

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies]
axum = { workspace = true }
bodhicore = { path = "../../bodhicore" }
commands = { path = "../../crates/commands" }
objs = { path = "../../crates/objs" }
services = { path = "../../crates/services" }
clap = { workspace = true, features = ["derive"] }
dotenv = { workspace = true }
futures-util = { workspace = true }
include_dir = { workspace = true }
tauri = { version = "1.6.1", features = ["updater", "api-all", "system-tray"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-serve-static = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
webbrowser = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
fs_extra = { workspace = true }
tauri-build = { version = "1.5.1", features = [] }
