[package]
name = "auth_middleware"
version = "0.0.41-dev"
edition = "2021"

[dependencies]
errmeta_derive = { workspace = true }
objs = { workspace = true }
include_dir = { workspace = true }
services = { workspace = true }
server_core = { workspace = true }
time = { workspace = true }

anyhow = { workspace = true, optional = true }
axum = { workspace = true }
base64 = { workspace = true, optional = true }
chrono = { workspace = true }
constant_time_eq = { workspace = true }
derive_builder = { workspace = true, optional = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, optional = true }
rstest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["indexmap"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
tower-sessions = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }
services = { workspace = true, features = ["test-utils"] }
server_core = { workspace = true, features = ["test-utils"] }
auth_middleware = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
axum = { workspace = true, features = ["macros"] }
dotenv = { workspace = true }
maplit = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rstest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
tower-sessions = { workspace = true }
uuid = { workspace = true }

[features]
test-utils = ["anyhow","base64", "derive_builder", "reqwest", "rstest", "services/test-utils"]
