[package]
name = "ci_optims"
version = "0.1.0-dev"
edition = "2021"
description = "Dummy crate for pre-compiling dependencies in CI builds"

[dependencies]
# Include all heavy dependencies from workspace to pre-compile them
aes-gcm = { workspace = true }
anyhow = { workspace = true }
anyhow_trace = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
convert_case = { workspace = true }
cookie = { workspace = true }
derive_builder = { workspace = true }
derive-new = { workspace = true }
dialoguer = { workspace = true }
dircpy = { workspace = true }
dirs = { workspace = true }
dotenv = { workspace = true }
fluent = { workspace = true }
fluent-resmgr = { workspace = true }
fs_extra = { workspace = true }
fs2 = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
hf-hub = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
include_dir = { workspace = true }
indicatif = { workspace = true }
jsonwebtoken = { workspace = true }
keyring = { workspace = true }
lazy_static = { workspace = true }
libc = { workspace = true }
libloading = { workspace = true }
log = { workspace = true }
maplit = { workspace = true }
memmap2 = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
mini-moka = { workspace = true }
minijinja = { workspace = true }
oauth2 = { workspace = true }
once_cell = { workspace = true }
pbkdf2 = { workspace = true }
phf = { workspace = true }
pin-project-lite = { workspace = true }
portpicker = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
strfmt = { workspace = true }
strum = { workspace = true }
syn = { workspace = true }
sync_wrapper = { workspace = true }
tap = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-cookies = { workspace = true }
tower-http = { workspace = true }
tower-serve-static = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
unic-langid = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
walkdir = { workspace = true }
webbrowser = { workspace = true }
