[package]
name = "commands"
version = "0.1.0"
edition = "2021"

[dependencies]
objs = { workspace = true }
errmeta_derive = { workspace = true }
services = { workspace = true }

axum = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive_builder = { workspace = true }
derive-new = { workspace = true }
fluent = { workspace = true }
prettytable-rs = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }
services = { workspace = true, features = ["test-utils"] }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }

[features]
test-utils = []
