[package]
name = "commands"
version = "0.0.46-dev"
edition = "2021"

[dependencies]
objs = { workspace = true }
errmeta_derive = { workspace = true }
services = { workspace = true }

derive_builder = { workspace = true }
derive-new = { workspace = true }

include_dir = { workspace = true }
prettytable = { workspace = true }
rstest = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
objs = { workspace = true, features = ["test-utils"] }
services = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

anyhow = { workspace = true }
anyhow_trace = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }

[features]
test-utils = ["rstest", "services/test-utils"]
