[package]
name = "errmeta_derive"
version = "0.0.16-dev"
edition = "2021"
description = "A proc macro for adding metadata on errors"
license = "MIT"
authors = ["Amir Nagri <amir.nagri@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
convert_case = { workspace = true }

[dev-dependencies]
http = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
trybuild = { workspace = true }

[[test]]
name = "trybuild"
path = "tests/trybuild.rs"
